@startuml

skinparam monochrome true
skinparam classFontSize 9
skinparam classFontName Monospaced

[*] -right-> LOCKED

state LOCKED {
    LOCKED --> LOCKED : <<default>> PASS\n{ alarm() }
    LOCKED --> COINS : COIN(value)\n{ coin(value); }
}

state UNLOCKED {
    UNLOCKED --> LOCKED : PASS\n{ lock() }
    UNLOCKED --up--> COINS : COIN(value)\n{ coin(value); }
}

state coins {
    state COINS {
        COINS --> COINS : COIN(value)\n{ coin(value); }
        COINS --down--> UNLOCKED : <<automatic,pop>>\nguard:{ value + coins == requiredCoins }\n{ unlock() }
        COINS --down--> UNLOCKED : <<automatic,pop>>\nguard:{ value + coins > requiredCoins }\n{ returnCoin(); unlock(); }
    }
}

@enduml
